<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>turtlebot3_joy_interpreter</name>
  <version>0.0.1</version>
  <description>
    Joystick interpreters for Turtlebot3 to publish movement commands.
  </description>
  <license>BSD 3-Clause</license>
  <maintainer email="aws-ros-contributions@amazon.com">AWS ROS Contributions</maintainer>

  <author email="emerson.b.knapp@gmail.com">Emerson Knapp</author>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
